--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -372,8 +372,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button46" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button42" app:layout_constraintStart_toEndOf="@+id/button45"
-                android:layout_marginStart="8dp" android:onClick="we_sub_numberpicker" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:layout_marginStart="8dp" android:onClick="we_sub_numberpicker"
+        />
         <Button
                 android:text="@string/button47"
                 android:layout_width="wrap_content"
@@ -458,8 +458,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button58" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button55" app:layout_constraintStart_toEndOf="@+id/button57"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" android:onClick="we_sub_viewpager_tabhost"/>
+                android:layout_marginStart="8dp"
+                android:onClick="we_sub_viewpager_tabhost"/>
         <Button
                 android:text="@string/button59"
                 android:layout_width="wrap_content"
@@ -473,7 +473,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/button60" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button57" app:layout_constraintStart_toEndOf="@+id/button59"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="8dp"
                 android:onClick="we_sub_swiperefreshlayout"/>
         <Button
                 android:text="@string/button61"
@@ -503,5 +503,96 @@
                 android:id="@+id/button64" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/button61" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:onClick="we_sub_activity_save_h_or_v"/>
+        <Button
+                android:text="@string/button65"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button65" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button61" app:layout_constraintStart_toEndOf="@+id/button64"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_stack_start"/>
+        <Button
+                android:text="@string/button66"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button66" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button64" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_intent"/>
+        <Button
+                android:text="@string/button67"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button67" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button64" app:layout_constraintStart_toEndOf="@+id/button66"
+                android:layout_marginStart="8dp" android:onClick="we_sub_intent_property_top"/>
+        <Button
+                android:text="@string/button68"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button68" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button66" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_intent_property_bottom"/>
+        <Button
+                android:text="@string/button69"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button69" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button66" app:layout_constraintStart_toEndOf="@+id/button68"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_transmit"/>
+        <Button
+                android:text="@string/button70"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button70" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button68" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_return"/>
+        <Button
+                android:text="@string/button71"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button71" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button68" app:layout_constraintStart_toEndOf="@+id/button70"
+                android:layout_marginStart="8dp" android:onClick="we_sub_activity_data_sub"/>
+        <Button
+                android:text="@string/button72"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button72" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button70" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_fragment"/>
+        <Button
+                android:text="@string/button73"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button73" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button70" app:layout_constraintStart_toEndOf="@+id/button72"
+                android:layout_marginStart="8dp" android:onClick="we_sub_fragment_play"/>
+        <Button
+                android:text="@string/button74"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button74" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button72" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_fragment_life_cycle"/>
+        <Button
+                android:text="@string/button75"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button75" app:layout_constraintStart_toEndOf="@+id/button74"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button72" android:onClick="we_sub_fragment_add_delete"/>
+        <Button
+                android:text="@string/button76"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button76" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button74" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_fragment_display"/>
+        <Button
+                android:text="@string/button77"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button77" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/button76" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:onClick="we_sub_fragment_back"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
