--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -13,7 +13,7 @@
             android:orientation="vertical"
             android:scrollbars=""
             android:fillViewport="false">
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
@@ -600,11 +600,11 @@
                     android:id="@+id/button77" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/button76" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" android:onClick="we_sub_fragment_back"/>
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
 <!-- 侧滑菜单栏 -->
-<android.support.design.widget.NavigationView
+<com.google.android.material.navigation.NavigationView
         android:id="@+id/nv_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -612,4 +612,4 @@
         app:headerLayout="@layout/navi_head"
         app:menu="@menu/menu_drawer"/>
 
-</android.support.v4.widget.DrawerLayout >
+</androidx.drawerlayout.widget.DrawerLayout >
