--- a/app/src/main/res/layout/we_sub_cardview.xml
+++ b/app/src/main/res/layout/we_sub_cardview.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
@@ -17,9 +17,9 @@
                 android:textSize="20sp"
                 android:padding="10dp"
                 android:layout_margin="10dp"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -33,9 +33,9 @@
                 android:textSize="20sp"
                 android:padding="20dp"
                 android:layout_margin="10dp"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -51,8 +51,8 @@
                 android:textSize="20sp"
                 android:padding="10dp"
                 android:layout_margin="10dp"/>
-    </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
             android:id="@+id/cardview"
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -75,5 +75,5 @@
                 android:text="CardView作为item使用"
                 android:textColor="@android:color/white"
                 android:textSize="24sp"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
