--- a/app/src/main/res/layout/we_sub_recyclerview.xml
+++ b/app/src/main/res/layout/we_sub_recyclerview.xml
@@ -16,7 +16,7 @@
         </TableRow>
     </TableLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
