--- a/app/src/main/res/layout/we_sub_recyclerview_divider.xml
+++ b/app/src/main/res/layout/we_sub_recyclerview_divider.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_divider"
             android:background="#5000"
             android:layout_width="wrap_content"
