--- a/app/src/main/res/layout/we_sub_swiperefreshlayout.xml
+++ b/app/src/main/res/layout/we_sub_swiperefreshlayout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/container_swipe"
         android:layout_width="match_parent"
@@ -19,4 +19,4 @@
                 android:textStyle="bold"/>
     </ScrollView>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
