--- a/app/src/main/res/layout/we_sub_viewpager_tabhost.xml
+++ b/app/src/main/res/layout/we_sub_viewpager_tabhost.xml
@@ -4,14 +4,14 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager_tabhost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <android.support.v4.view.PagerTabStrip
+        <androidx.viewpager.widget.PagerTabStrip
                 android:id="@+id/view_pager_tabstrip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
