--- a/app/src/main/res/layout/navi_head.xml
+++ b/app/src/main/res/layout/navi_head.xml
@@ -13,7 +13,7 @@
     <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/bh3"/>
+            android:src="@drawable/manhua"/>
 
     <TextView
             android:layout_width="wrap_content"
