--- a/chenyu_demo/src/main/res/values/colors.xml
+++ b/chenyu_demo/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <!--    标题栏的颜色-->
+    <color name="colorPrimary">#0081ff</color>
+    <!--    状态栏的颜色-->
+    <color name="colorPrimaryDark">#0081ff</color>
     <color name="colorAccent">#03DAC5</color>
 </resources>
