--- a/chenyu_demo/src/main/res/layout/course_16.xml
+++ b/chenyu_demo/src/main/res/layout/course_16.xml
@@ -50,5 +50,15 @@
             android:layout_height="wrap_content"
             android:text="Button基于回调的事件处理"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/configuration_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
