--- a/chenyu_demo/src/main/res/layout/course_17.xml
+++ b/chenyu_demo/src/main/res/layout/course_17.xml
@@ -79,5 +79,47 @@
             android:id="@+id/basea_adapter"
             android:layout_width="match_parent"
             android:layout_height="400dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+
+            <Button
+                android:id="@+id/add_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="添加"/>
+            <Button
+                android:id="@+id/update_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="更新"/>
+            <Button
+                android:id="@+id/delete_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="删除"/>
+            <Button
+                android:id="@+id/clear_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="清空"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/empty_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="15dp"
+            android:textSize="15sp"
+            android:text="暂无数据"/>
+
+        <ListView
+            android:id="@+id/listview_apply"
+            android:layout_width="match_parent"
+            android:layout_height="400dp" />
     </LinearLayout>
 </ScrollView>
