--- a/chenyu_demo/src/main/res/layout/course_38.xml
+++ b/chenyu_demo/src/main/res/layout/course_38.xml
@@ -1,32 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TableLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:scrollbars="none"
+    android:fillViewport="false">
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TableRow>
-            <Button
-                android:text="切换横竖"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/recyclerview_hengshu"/>
-        </TableRow>
-    </TableLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_divider"
-        android:background="#5000"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_click"
-        android:background="#5000"
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"/>
-</LinearLayout>
+        android:layout_height="500dp">
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TableRow>
+                <Button
+                    android:text="切换横竖"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/recyclerview_hengshu"/>
+            </TableRow>
+        </TableLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="wrap_content"
+            android:layout_height="500dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="自定义分割线"
+            android:textSize="26dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_divider"
+            android:background="#5000"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="500dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="绑定点击和长按事件"
+            android:textSize="26dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_click"
+            android:background="#5000"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="600dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="动态数据绑定"
+            android:textSize="26dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_apply"
+            android:background="#5000"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="600dp"/>
+    </LinearLayout>
+</ScrollView>
