--- a/chenyu_demo/src/main/res/layout/course_2.xml
+++ b/chenyu_demo/src/main/res/layout/course_2.xml
@@ -84,5 +84,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="关闭自己"/>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/intent_Component_text" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/intent_Action_text" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/intent_Category_text" />
 </LinearLayout>
