--- a/chenyu_demo/src/main/res/layout/course_44.xml
+++ b/chenyu_demo/src/main/res/layout/course_44.xml
@@ -1,62 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TableLayout
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:scrollbars="none"
+    android:fillViewport="false">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TableRow
-            android:layout_marginBottom="20dp">
-            <TextView
-                android:textSize="20dp"
-                android:textColor="#66ccff"
-                android:layout_width="wrap_content"
-                android:text="Intent主要介绍"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="1.启动 Activity"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="2.启动服务"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="3.发送广播"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_marginBottom="20dp">
-            <TextView
-                android:textSize="20dp"
-                android:textColor="#66ccff"
-                android:layout_width="wrap_content"
-                android:text="Intent类型"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="1.显式intent，主要是用kotlin代码这边创建操作"
-                />
-        </TableRow>
-        <TableRow
-            android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="2.隐式intent，主要是在配置文件里面操作"
-                />
-        </TableRow>
-    </TableLayout>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TableRow>
+                <TextView
+                    android:textSize="20dp"
+                    android:textColor="#66ccff"
+                    android:layout_width="wrap_content"
+                    android:text="Intent主要介绍"
+                    />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="1.启动 Activity"
+                    />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="2.启动服务"
+                    />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="3.发送广播"
+                    />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:textSize="20dp"
+                    android:textColor="#66ccff"
+                    android:layout_width="wrap_content"
+                    android:text="Intent类型"
+                    />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="1.显式intent，主要是用kotlin代码这边创建操作"
+                    />
+            </TableRow>
+            <TableRow>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="2.隐式intent，主要是在配置文件里面操作"
+                    />
+            </TableRow>
+        </TableLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Component"
+            android:id="@+id/intent_Component" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Action"
+            android:id="@+id/intent_Action" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category"
+            android:id="@+id/intent_Category" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DATA覆盖TYPE"
+            android:id="@+id/intent_data_fugai_type" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TYPE覆盖DATA"
+            android:id="@+id/intent_type_fugai_data" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="同时设置DATA和TYPE"
+            android:id="@+id/intent_data_and_type" />
+    </LinearLayout>
+</ScrollView>
